[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abacustest"
dynamic = ["version"]
description = "abacus test system"
requires-python = ">=3.6"

[project.scripts]
abacustest = "abacustest.main:main"

[project.entry-points.console_scripts]
abacustest = "abacustest.main:main"

[tool.setuptools]
packages = ["abacustest"]
package-dir = {"abacustest" = "abacustest"}
package-data = {"abacustest" = ["*.py", "*/*.py", "*/*/*.py", "version"]}

[project.optional-dependencies]
dev = ["pydflow>=1.8.45", "numpy", "pandas", "pyecharts", "seekpath", "phonopy", "dpdata", "ase"]