[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "abacustest"
dynamic = ["version"]
description = "Workflow for the performance running of ABACUS"
readme = "README.md"
authors = [
    { name = "pxlxingliang", email = "pengxl@aisi.ac.cn" },
    { name = "QuantumMisaka", email = "quanmisaka@stu.pku.edu.cn" },
]
license = { file = "LICENCE" }
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Environment :: Console",
]
dependencies = [
    "pydflow>=1.8.45",
    "numpy",
    "pandas",
    "pyecharts",
    "seekpath",
    "phonopy",
    "dpdata",
    "ase",
    "matplotlib",
    "pydantic"
]
requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/pxlxingliang/abacus-test"

[project.scripts]
abacustest = "abacustest.main:main"

[tool.setuptools]
packages = ["abacustest"]
package-dir = { "abacustest" = "abacustest" }

[tool.setuptools.dynamic]
version = { attr = "abacustest.version.__version__" }

[tool.setuptools.package-data]
abacustest = ["*.py", "*/*.py", "*/*/*.py"]